@@ -25,7 +25,7 @@ requires 'English' => 0;
 requires 'Error::Pure' => 0;
 requires 'MARC::Convert::Wikidata::Object' => 0.05;
 requires 'MARC::Convert::Wikidata::Object::ExternalId' => 0;
-requires 'MARC::Convert::Wikidata::Object::ISBN' => 0;
+requires 'MARC::Convert::Wikidata::Object::ISBN' => 0.07;
 requires 'MARC::Convert::Wikidata::Object::Kramerius' => 0;
 requires 'MARC::Convert::Wikidata::Object::People' => 0;
 requires 'MARC::Convert::Wikidata::Object::Publisher' => 0;
