@@ -1,6 +1,7 @@
 0.17
  - Add another publication place cleanup use case.
  - Add another edition number cleanup use case.
+ - Add processing of collective ISBN.
  - Implement collective to clean_cover().
  - Rewrite Kramerius of MZK to Kramerius of CDL.
 
